Add post voting, thread creation and UI updates
Introduce PostVotes entity and implement voting logic: add upvote/downvote/removeVote/getUserVote and vote recalculation in PostService, and wire vote actions in PostController. Enhance ThreadController with thread creation/deletion, newThread handling and thread list refresh. Update ThreadService and TrafficLogService to use typed Panache queries and add helpers (post count by thread). Revamp JSF components: createThreadForm added, createPostForm and viewPosts updated for voting, post creation, feedback messages, and navigation; listThreads redesigned with admin controls. Add forum-related CSS styles, remove legacy index.html redirect, refine index.xhtml layout & scripts, and add robots.txt and sitemap.xml.